# swbackend

./: .gitignore  README.md  requirements.txt
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/scws/: __init__.py  config.py  main.py
backend/scws/api/: devices.py  health.py  streaming.py
backend/scws/core/adb/: __init__.py  connection.py  device_manager.py
backend/scws/core/scrcpy/: __init__.py  config_builder.py  process_manager.py  server_deployer.py
backend/scws/models/: __init__.py  api.py  device.py  resolution.py  scrcpy.py  websocket.py
backend/scws/utils/: __init__.py  async_helpers.py  constants.py  errors.py  logger.py
backend/scws/ws/: __init__.py  router.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md
